--- a/index.html
+++ b/index.html
@@ -1,55 +1,53 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lamg="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Главная - Название вашего сайта</title>
-    <meta
-      name="description"
-      content="Краткое описание главной страницы вашего сайта"
-    />
-    <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+    <title>Семестровая работа</title>
   </head>
   <body>
-    <!-- Шапка сайта -->
-    <header>
-      <a href="/">Логотип или название сайта</a>
-      <!-- Главное меню навигации -->
-      <nav>
-        <ul>
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="about.html">О нас</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-      </nav>
-    </header>
-    <!-- Уникальное основное содержимое страницы -->
-    <main>
-      <h1>Добро пожаловать на наш сайт!</h1>
-      <!-- Секция 1 с якорем -->
-      <section id="services">
-        <h2>Наши услуги</h2>
-        <p>Описание предоставляемых услуг...</p>
-        <a href="#contacts">Связаться с нами</a>
-        <!-- Якорная ссылка внутри страницы -->
-      </section>
-      <!-- Секция 2 с якорем -->
-      <section id="portfolio">
-        <h2>Портфолио</h2>
-        <p>Примеры наших работ...</p>
-      </section>
-      <!-- Секция 3 с якорем -->
-      <section id="contacts">
-        <h2>Контактная информация</h2>
-        <p>Наши контакты...</p>
-        <a href="contacts.html">Подробнее</a>
-        <!-- Ссылка на отдельную страницу -->
-      </section>
-    </main>
-    <!-- Подвал сайта -->
-    <footer>
-      <p>&copy; 2023 Название вашего сайта. Все права защищены.</p>
-      <p>Телефон: +7 (123) 456-78-90</p>
-    </footer>
-  </body>
+    <div id="header">Хэдер</div>
+    <div id="menu">
+      <ul>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="pages/news.html">Новости</a></li>
+        <li><a href="pages/practices.html">Практики</a></li>
+        <li><a href="pages/goods.html">Товары</a></li>
+        <li><a href="pages/contacts.html">Контакты</a></li>
+      </ul>
+    </div>
+    <div id="content">
+      <p>Информация об авторе</p>
+      <img src="images/photo.png" alt="Фото автора" width="200" height="250" />
+      <p>Иванов Иван Иванович</p>
+      <p>ЭФБО-00-00</p>
+      <p>
+        Обо мне: Я родился в Москве в 70-м на краю города. Глупость рано ударила
+        в голову. В четыре активно ругался. Потом школа, форма, драки, клей. Так
+        я становился сильней. Воровал деньги в раздевалке.
+      </p>
+      <div>Навык 1</div>
+      <div>Навык 2</div>
+      <div>Навык 3</div>
+      <div>Навык 4</div>
+      <div>
+        Мой опыт работы:
+        <div>
+          Опыт 1<br />
+          Работал фантазёром. Сочинял и праздновал.
+        </div>
+      </div>
+    </div>
+<div>
+ Опыт 2<br>
+ Работал воровством. Воровал и продавал.
+ </div>
+ <div>
+ Опыт 3<br>
+ Работал рэпером. Читал и пел.
+ </div>
+ </div>
+ </div>
+ <div id="footer">Футер</div>
+ </body>
 </html>
