--- a/pages/practices.html
+++ b/pages/practices.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Контакты - Семестровая работа</title>
+    <title>Практики - Семестровая работа</title>
     <link rel="stylesheet" href="../style/styles.css">
 </head>
 
@@ -21,18 +21,19 @@
             </ul>
         </div>
         <div class="content">
-            <h1 class="page-title">Контактная информация</h1>
-            <div class="contacts-container">
-                <div class="contact-card">
-                    <h3 class="contact-title">Электронная почта</h3>
-                    <p class="contact-info">extrahamster2017@yandex.ru</p>
+            <h1 class="page-title">Практические работы</h1>
+            <div class="practices-container">
+                <div class="practice-card">
+                    <h3 class="practice-title">Практическая работа №1</h3>
+                    <p class="practice-desc">Введение в HTML разметку</p>
                 </div>
-                <div class="contact-card">
-                    <h3 class="contact-title">Адрес</h3>
-                    <p class="contact-info">Бейкер-стрит, 221b</p>
+                <div class="practice-card">
+                    <h3 class="practice-title">Практическая работа №2</h3>
+                    <p class="practice-desc">Основы CSS стилизации</p>
                 </div>
-                <div class="contact-card">
-                    <button class="contact-button">Позвоните мне - 89853800119</button>
+                <div class="practice-card">
+                    <h3 class="practice-title">Практическая работа №3</h3>
+                    <p class="practice-desc">Адаптивная верстка</p>
                 </div>
             </div>
         </div>
