--- a/index.html
+++ b/index.html
@@ -1,53 +1,58 @@
 <!DOCTYPE html>
 <html lamg="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Семестровая работа</title>
-  </head>
-  <body>
-    <div id="header">Хэдер</div>
-    <div id="menu">
-      <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="pages/news.html">Новости</a></li>
-        <li><a href="pages/practices.html">Практики</a></li>
-        <li><a href="pages/goods.html">Товары</a></li>
-        <li><a href="pages/contacts.html">Контакты</a></li>
-      </ul>
-    </div>
-    <div id="content">
-      <p>Информация об авторе</p>
-      <img src="images/photo.png" alt="Фото автора" width="200" height="250" />
-      <p>Иванов Иван Иванович</p>
-      <p>ЭФБО-00-00</p>
-      <p>
-        Обо мне: Я родился в Москве в 70-м на краю города. Глупость рано ударила
-        в голову. В четыре активно ругался. Потом школа, форма, драки, клей. Так
-        я становился сильней. Воровал деньги в раздевалке.
-      </p>
-      <div>Навык 1</div>
-      <div>Навык 2</div>
-      <div>Навык 3</div>
-      <div>Навык 4</div>
+
+<head>
+  <script src="main.js" defer></script>
+  <link rel="stylesheet" href="styles.css">
+
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Семестровая работа</title>
+</head>
+
+<body>
+  <div id="header">Хэдер</div>
+  <div id="menu">
+    <ul>
+      <li><a href="index.html">Главная</a></li>
+      <li><a href="pages/news.html">Новости</a></li>
+      <li><a href="pages/practices.html">Практики</a></li>
+      <li><a href="pages/goods.html">Товары</a></li>
+      <li><a href="pages/contacts.html">Контакты</a></li>
+    </ul>
+  </div>
+  <div id="content">
+    <p>Информация об авторе</p>
+    <img src="images/photo.png" alt="Фото автора" width="200" height="250" />
+    <p>Иванов Иван Иванович</p>
+    <p>ЭФБО-07-24</p>
+    <p>
+      Меня зовут Вито Скалетта. Я родился на Сицилии, в 25-м году. Это — наша семья. Стою с родителями и сестрой
+      Франческой.
+    </p>
+    <div>Жму 100кг от пяток</div>
+    <div>Могу не дышать чуть больше 3 секунд</div>
+    <div>Сыркал баска</div>
+    <div>бабынбубынбубс</div>
+    <div>
+      Мой опыт работы:
       <div>
-        Мой опыт работы:
-        <div>
-          Опыт 1<br />
-          Работал фантазёром. Сочинял и праздновал.
-        </div>
+        Опыт 1<br />
+        Соберал перхоть с пола.
       </div>
     </div>
-    <div>
- Опыт 2<br>
- Работал воровством. Воровал и продавал.
- </div>
- <div>
- Опыт 3<br>
- Работал рэпером. Читал и пел.
- </div>
- </div>
- </div>
- <div id="footer">Футер</div>
- </body>
+  </div>
+  <div>
+    Опыт 2<br>
+    Работал точилкой, я грыз карандаши.
+  </div>
+  <div>
+    Опыт 3<br>
+    Работал рэпером. Читал и пел.
+  </div>
+  </div>
+  </div>
+  <div id="footer">Футер</div>
+</body>
+
 </html>
