--- a/pages/goods.html
+++ b/pages/goods.html
@@ -24,19 +24,19 @@
             <h1 class="page-title">Каталог товаров</h1>
             <div class="goods-container">
                 <div class="goods-card">
-                    <img class="goods-image" src="photo2.png" alt="Товар 1">
+                    <img class="goods-image" src="images/photo2.png" alt="Товар 1">
                     <h3 class="goods-title">Хант DLS</h3>
                     <p class="goods-price">350 руб.</p>
                     <button class="goods-button">Купить</button>
                 </div>
                 <div class="goods-card">
-                    <img class="goods-image" src="photo3.png" alt="Товар 2">
+                    <img class="goods-image" src="images/photo3.png" alt="Товар 2">
                     <h3 class="goods-title">Fortnite</h3>
                     <p class="goods-price">2 990 руб.</p>
                     <button class="goods-button">Купить</button>
                 </div>
                 <div class="goods-card">
-                    <img class="goods-image" src="photo4.png" alt="Товар 3">
+                    <img class="goods-image" src="images/photo4.png" alt="Товар 3">
                     <h3 class="goods-title">STANDOFF 2</h3>
                     <p class="goods-price">3 990 руб.</p>
                     <button class="goods-button">Купить</button>
