--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -31,13 +31,58 @@
                     <h3 class="contact-title">Адрес</h3>
                     <p class="contact-info">Бейкер-стрит, 221b</p>
                 </div>
+
+                <!-- Добавить после строки "Позвоните мне - 89853800119" -->
                 <div class="contact-card">
-                    <button class="contact-button">Позвоните мне - 89853800119</button>
+                    <h3 class="contact-title">Связаться со мной</h3>
+                    <button id="openDialog" type="button" class="contact-button">Позвонить мне</button>
                 </div>
+
+                <!-- Модальное окно с формой обратной связи -->
+                <dialog id="contactDialog" aria-labelledby="dialogTitle">
+                    <h2 id="dialogTitle">Заказать обратный звонок</h2>
+
+                    <form id="contactForm" method="dialog" novalidate>
+                        <label for="name">Имя</label>
+                        <input id="name" name="name" type="text" required minlength="2" autocomplete="given-name">
+
+                        <label for="email">E-mail</label>
+                        <input id="email" name="email" type="email" required autocomplete="email">
+
+                        <label for="phone">Телефон</label>
+                        <input id="phone" name="phone" type="tel" inputmode="tel" autocomplete="tel"
+                            aria-describedby="phoneHelp" placeholder="+7 (___) ___-__-__" required
+                            pattern="^\+7 \(\d{3}\) \d{3}-\d{2}-\d{2}$">
+                        <small id="phoneHelp">Формат: +7 (900) 000-00-00</small>
+
+                        <label for="time">Удобное время звонка</label>
+                        <select id="time" name="time" required>
+                            <option value="">Выберите время</option>
+                            <option>09:00 - 12:00</option>
+                            <option>12:00 - 15:00</option>
+                            <option>15:00 - 18:00</option>
+                            <option>18:00 - 21:00</option>
+                        </select>
+
+                        <label for="message">Дополнительная информация</label>
+                        <textarea id="message" name="message" rows="3"
+                            placeholder="Укажите удобную дату или дополнительные пожелания"></textarea>
+
+                        <div class="form-actions">
+                            <button type="button" id="closeDialog">Отмена</button>
+                            <button type="submit">Заказать звонок</button>
+                        </div>
+                    </form>
+                </dialog>
+
             </div>
         </div>
+
         <div class="footer">Футер</div>
     </div>
+
+    <script src="../main.js" defer></script>
+
 </body>
 
 </html>
