--- a/index.html
+++ b/index.html
@@ -4,73 +4,255 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Семестровая работа</title>
+  <title>Главная - Портфолио</title>
+
+  <!-- Bootstrap CSS и иконки -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
+  <!-- Твои кастомные стили (для доп. оформления, можно оставить) -->
   <link rel="stylesheet" href="style/styles.css">
 </head>
 
-<body>
-  <div class="page-container">
-    <header class="header">
-      <h1>Алёхин Алексей Витальевич</h1>
+<body class="bg-light">
+
+  <div class="container-fluid p-0">
+
+    <!-- Header -->
+    <header class="bg-primary text-white py-4">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col">
+            <h1 class="h3 mb-1">Алёхин Алексей Витальевич</h1>
+            <p class="mb-0 opacity-75">Студент, веб‑разработчик</p>
+          </div>
+          <div class="col-auto">
+            <span class="badge bg-light text-primary">ЭФБО-07-24</span>
+          </div>
+        </div>
+      </div>
     </header>
 
-    <nav class="nav">
-      <ul class="nav-list">
-        <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
-        <li class="nav-item"><a class="nav-link" href="pages/news.html">Новости</a></li>
-        <li class="nav-item"><a class="nav-link" href="pages/practices.html">Практики</a></li>
-        <li class="nav-item"><a class="nav-link" href="pages/goods.html">Товары</a></li>
-        <li class="nav-item"><a class="nav-link" href="pages/contacts.html">Контакты</a></li>
-      </ul>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">
+                <i class="bi bi-house me-1"></i>Главная
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/news.html">
+                <i class="bi bi-newspaper me-1"></i>Новости
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/practices.html">
+                <i class="bi bi-code-slash me-1"></i>Практики
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/goods.html">
+                <i class="bi bi-cart me-1"></i>Товары
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/contacts.html">
+                <i class="bi bi-telephone me-1"></i>Контакты
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
 
-    <main class="content">
-      <article class="profile-header">
-        <h1 class="profile-title">Информация об авторе</h1>
-        <img class="profile-photo" src="images/photo1.webp" alt="Фото автора">
-        <h2 class="profile-name">Алёхин Алексей Витальевич</h2>
-        <p class="profile-group">ЭФБО-07-24</p>
-      </article>
+    <!-- Main content -->
+    <main class="container my-4">
 
-      <section class="about-me">
-        <h2>Обо мне</h2>
-        <p>Меня зовут Вито Скалетта. Я родился на Сицилии, в 25-м году. Это — наша семья. Стою с родителями и сестрой
-          Франческой.</p>
-      </section>
-
-      <section class="skills-container">
-        <h2>Мои навыки</h2>
-        <div class="skills-grid">
-          <div class="skill-tag">Жму 100кг от пяток</div>
-          <div class="skill-tag">Могу не дышать чуть больше 3 секунд</div>
-          <div class="skill-tag">Сыркал баска</div>
-          <div class="skill-tag">бабынбубынбубс</div>
+      <!-- Профиль -->
+      <section class="mb-5">
+        <div class="card shadow-sm">
+          <div class="card-body p-4">
+            <div class="row align-items-center">
+              <div class="col-md-3 text-center mb-3 mb-md-0">
+                <img src="images/photo1.webp" alt="Фото автора" class="img-fluid rounded-circle"
+                  style="width: 150px; height: 150px; object-fit: cover;">
+              </div>
+              <div class="col-md-9">
+                <h2 class="card-title h4 text-primary">Алёхин Алексей Витальевич</h2>
+                <p class="card-text text-muted mb-2">
+                  <i class="bi bi-bookmark-check-fill text-primary"></i>
+                  Студент группы ЭФБО-07-24
+                </p>
+                <p class="card-text">
+                  Жму 100кг от пяток. Могу не дышать чуть больше 3 секунд.
+                  Сыркал баска. бабынбубынбубс.
+                </p>
+                <div class="d-flex gap-2 flex-wrap">
+                  <span class="badge bg-primary">HTML/CSS</span>
+                  <span class="badge bg-success">JavaScript</span>
+                  <span class="badge bg-info">Bootstrap</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
-      <section class="experience-section">
-        <h2 class="section-title">Мой опыт работы</h2>
-        <div class="experience-grid">
-          <article class="experience-card">
-            <h3 class="experience-title">Perhot`inc:</h3>
-            <p class="experience-desc">Соберал перхоть с пола.</p>
-          </article>
-          <article class="experience-card">
-            <h3 class="experience-title">Точилка рулит:</h3>
-            <p class="experience-desc">Работал точилкой, я грыз карандаши.</p>
-          </article>
-          <article class="experience-card">
-            <h3 class="experience-title">Рэп:</h3>
-            <p class="experience-desc">Работал рэпером. Читал и пел.</p>
-          </article>
+      <!-- Обо мне -->
+      <section class="mb-5">
+        <div class="card shadow-sm">
+          <div class="card-header bg-light">
+            <h3 class="card-title h5 mb-0">
+              <i class="bi bi-person-circle text-primary"></i>
+              Обо мне
+            </h3>
+          </div>
+          <div class="card-body">
+            <p class="card-text">
+              Меня зовут Вито Скалетта. Я родился на Сицилии, в 25‑м году. Это — наша семья.
+              Стою с родителями и сестрой Франческой.
+            </p>
+          </div>
         </div>
       </section>
+
+      <!-- Навыки -->
+      <section class="mb-5">
+        <div class="card shadow-sm">
+          <div class="card-header bg-light">
+            <h3 class="card-title h5 mb-0">
+              <i class="bi bi-tools text-primary"></i>
+              Мои навыки
+            </h3>
+          </div>
+          <div class="card-body">
+            <div class="row g-4">
+              <div class="col-md-6">
+                <div class="mb-3">
+                  <div class="d-flex justify-content-between mb-1">
+                    <span>Жму 100кг от пяток</span>
+                    <span class="text-primary">100%</span>
+                  </div>
+                  <div class="progress" style="height: 8px;">
+                    <div class="progress-bar bg-primary" style="width: 100%"></div>
+                  </div>
+                </div>
+
+                <div class="mb-3">
+                  <div class="d-flex justify-content-between mb-1">
+                    <span>Могу не дышать чуть больше 3 секунд</span>
+                    <span class="text-primary">80%</span>
+                  </div>
+                  <div class="progress" style="height: 8px;">
+                    <div class="progress-bar bg-success" style="width: 80%"></div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-6">
+                <div class="mb-3">
+                  <div class="d-flex justify-content-between mb-1">
+                    <span>Сыркал баска</span>
+                    <span class="text-primary">70%</span>
+                  </div>
+                  <div class="progress" style="height: 8px;">
+                    <div class="progress-bar bg-info" style="width: 70%"></div>
+                  </div>
+                </div>
+
+                <div class="mb-3">
+                  <div class="d-flex justify-content-between mb-1">
+                    <span>бабынбубынбубс</span>
+                    <span class="text-primary">65%</span>
+                  </div>
+                  <div class="progress" style="height: 8px;">
+                    <div class="progress-bar bg-warning" style="width: 65%"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Опыт работы -->
+      <section class="mb-5">
+        <div class="card shadow-sm">
+          <div class="card-header bg-light">
+            <h3 class="card-title h5 mb-0">
+              <i class="bi bi-briefcase-fill text-primary"></i>
+              Мой опыт работы
+            </h3>
+          </div>
+          <div class="card-body">
+            <div class="row g-3">
+              <div class="col-md-4">
+                <div class="card h-100 border-start border-primary border-4">
+                  <div class="card-body">
+                    <h5 class="card-title">Perhot`inc:</h5>
+                    <p class="card-text small text-muted">
+                      Соберал перхоть с пола.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card h-100 border-start border-primary border-4">
+                  <div class="card-body">
+                    <h5 class="card-title">Точилка рулит:</h5>
+                    <p class="card-text small text-muted">
+                      Работал точилкой, я грыз карандаши.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card h-100 border-start border-primary border-4">
+                  <div class="card-body">
+                    <h5 class="card-title">Рэп:</h5>
+                    <p class="card-text small text-muted">
+                      Работал рэпером. Читал и пел.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
     </main>
 
-    <footer class="footer">
-      <p>&copy; 2025 Алёхин Алексей Витальевич, ЭФБО-07-24</p>
+    <!-- Footer -->
+    <footer class="bg-dark text-white py-4 mt-5">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-6">
+            <p class="mb-0">&copy; 2025 Алёхин Алексей Витальевич, ЭФБО-07-24.</p>
+          </div>
+          <div class="col-md-6 text-md-end">
+            <a href="pages/contacts.html" class="text-white text-decoration-none me-3">
+              Контакты
+            </a>
+            <a href="#" class="text-white text-decoration-none">
+              Политика конфиденциальности
+            </a>
+          </div>
+        </div>
+      </div>
     </footer>
+
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
