--- a/pages/goods.html
+++ b/pages/goods.html
@@ -5,46 +5,151 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Товары - Семестровая работа</title>
+
+    <!-- Bootstrap CSS и иконки -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
+    <!-- Кастомные стили -->
     <link rel="stylesheet" href="../style/styles.css">
 </head>
 
-<body>
-    <div class="page-container">
-        <div class="header">Хэдер</div>
-        <div class="nav">
-            <ul class="nav-list">
-                <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
-                <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
-                <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
-                <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
-                <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
-            </ul>
-        </div>
-        <div class="content">
-            <h1 class="page-title">Каталог товаров</h1>
-            <div class="goods-container">
-                <div class="goods-card">
-                    <img class="goods-image" src="../images/photo2.webp" alt="Товар 1">
-                    <h3 class="goods-title">Хант DLS</h3>
-                    <p class="goods-price">350 руб.</p>
-                    <button class="goods-button">Купить</button>
+<body class="bg-light d-flex flex-column min-vh-100">
+
+    <div class="container-fluid p-0 flex-grow-1">
+
+        <!-- Header -->
+        <header class="bg-primary text-white py-4">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col">
+                        <h1 class="h3 mb-1">Каталог товаров</h1>
+                        <p class="mb-0 opacity-75">Игровые товары</p>
+                    </div>
+                    <div class="col-auto">
+                        <span class="badge bg-light text-primary">Алёхин Алексей • ЭФБО-07-24</span>
+                    </div>
                 </div>
-                <div class="goods-card">
-                    <img class="goods-image" src="../images/photo3.webp" alt="Товар 2">
-                    <h3 class="goods-title">Fortnite</h3>
-                    <p class="goods-price">2 990 руб.</p>
-                    <button class="goods-button">Купить</button>
+            </div>
+        </header>
+
+        <!-- Navigation -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">
+                                <i class="bi bi-house me-1"></i>Главная
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="news.html">
+                                <i class="bi bi-newspaper me-1"></i>Новости
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="practices.html">
+                                <i class="bi bi-code-slash me-1"></i>Практики
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="goods.html">
+                                <i class="bi bi-cart me-1"></i>Товары
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacts.html">
+                                <i class="bi bi-telephone me-1"></i>Контакты
+                            </a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="goods-card">
-                    <img class="goods-image" src="../images/photo4.webp" alt="Товар 3">
-                    <h3 class="goods-title">STANDOFF 2</h3>
-                    <p class="goods-price">3 990 руб.</p>
-                    <button class="goods-button">Купить</button>
+            </div>
+        </nav>
+
+        <!-- Main content -->
+        <main class="container my-4">
+            <h2 class="h3 text-center mb-4">Каталог товаров</h2>
+
+            <div class="row g-4">
+
+                <!-- Товар 1: Хант DLS (со скидкой) -->
+                <div class="col-md-4">
+                    <div class="card h-100 shadow-sm border-0 position-relative">
+                        <span class="badge bg-danger position-absolute top-0 end-0 m-2">SALE</span>
+                        <img src="../images/photo2.webp" class="card-img-top" alt="Хант DLS"
+                            style="height: 220px; object-fit: cover;">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">Хант DLS</h5>
+                            <p class="card-text text-danger fw-bold mb-3">350 руб.</p>
+                            <button class="btn btn-success mt-auto">
+                                <i class="bi bi-bag-plus me-1"></i>Купить
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Товар 2: Fortnite (выбранный) -->
+                <div class="col-md-4">
+                    <div class="card h-100 shadow-sm border-primary border-2">
+                        <img src="../images/photo3.webp" class="card-img-top" alt="Fortnite"
+                            style="height: 220px; object-fit: cover;">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">Fortnite</h5>
+                            <p class="card-text text-danger fw-bold mb-3">2 990 руб.</p>
+                            <button class="btn btn-primary mt-auto">
+                                <i class="bi bi-bag-check me-1"></i>Купить
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Товар 3: STANDOFF 2 (недоступен) -->
+                <div class="col-md-4">
+                    <div class="card h-100 shadow-sm border-0 opacity-75">
+                        <img src="../images/photo4.webp" class="card-img-top" alt="STANDOFF 2"
+                            style="height: 220px; object-fit: cover;">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">STANDOFF 2</h5>
+                            <p class="card-text text-danger fw-bold mb-3">3 990 руб.</p>
+                            <button class="btn btn-secondary mt-auto" disabled>
+                                <i class="bi bi-x-circle me-1"></i>Нет в наличии
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </main>
+
+    </div>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white py-4 mt-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <p class="mb-0">&copy; 2025 Алёхин Алексей Витальевич, ЭФБО-07-24.</p>
+                </div>
+                <div class="col-md-6 text-md-end">
+                    <a href="contacts.html" class="text-white text-decoration-none me-3">
+                        Контакты
+                    </a>
+                    <a href="../index.html" class="text-white text-decoration-none">
+                        На главную
+                    </a>
                 </div>
             </div>
         </div>
-        <div class="footer">Футер</div>
-    </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../main.js"></script>
 </body>
 
 </html>
