--- a/pages/news.html
+++ b/pages/news.html
@@ -9,77 +9,91 @@
 </head>
 
 <body>
-    <div class="page-container">
-        <div class="header">Хэдер</div>
-        <div class="nav">
-            <ul class="nav-list">
-                <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Главная</a>
+    <div class="page">
+
+        <header class="header">
+            <h1 class="header__title">Новости</h1>
+            <p class="header__group">Алёхин Алексей Витальевич — ЭФБО-07-24</p>
+        </header>
+
+        <nav class="nav nav--main">
+            <ul class="nav__list">
+                <li class="nav__item">
+                    <a class="nav__link" href="../index.html">Главная</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="news.html">Новости</a>
+                <li class="nav__item nav__item--active">
+                    <a class="nav__link" href="news.html">Новости</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="practices.html">Практики</a>
+                <li class="nav__item">
+                    <a class="nav__link" href="practices.html">Практики</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="goods.html">Товары</a>
+                <li class="nav__item">
+                    <a class="nav__link" href="goods.html">Товары</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contacts.html">Контакты</a>
+                <li class="nav__item">
+                    <a class="nav__link" href="contacts.html">Контакты</a>
                 </li>
             </ul>
-        </div>
-        <div class="content">
-            <h1 class="page-title">Новости</h1>
-            <div class="news-container">
-                <div class="news-card">
-                    <h2 class="news-title">
-                        Кошка стала главой департамента в японском городе
-                    </h2>
-                    <p class="news-meta">20.06.2024 Воч Дима</p>
-                    <p class="news-content">
-                        В японском городке Тиба, в поисках оригинальности и способа
-                        привлечь внимание к местным вопросам, на пост главы департамента
-                        по связям с общественностью назначили… кошку по имени Момо! Она,
-                        конечно, не занимается административной работой, но её
-                        очаровательные фотографии и статус помогают повысить узнаваемость
-                        города и привлекать туристов. Мы все мечтаем о таком карьерном
-                        старте!
-                    </p>
+        </nav>
+
+        <main class="main">
+            <section class="news">
+                <h2 class="news__title">Новости</h2>
+
+                <div class="news__list">
+                    <article class="news-item">
+                        <h3 class="news-item__title">
+                            Кошка стала главой департамента в японском городе
+                        </h3>
+                        <p class="news-item__date">20.06.2024 Воч Дима</p>
+                        <p class="news-item__text">
+                            В японском городке Тиба, в поисках оригинальности и способа
+                            привлечь внимание к местным вопросам, на пост главы департамента
+                            по связям с общественностью назначили… кошку по имени Момо! Она,
+                            конечно, не занимается административной работой, но её
+                            очаровательные фотографии и статус помогают повысить узнаваемость
+                            города и привлекать туристов. Мы все мечтаем о таком карьерном
+                            старте!
+                        </p>
+                    </article>
+
+                    <article class="news-item">
+                        <h3 class="news-item__title">
+                            Собака спасла своего хозяина от ограбления, «выиграв» дуэль с
+                            грабителем
+                        </h3>
+                        <p class="news-item__date">22.06.2024 Воч Дима</p>
+                        <p class="news-item__text">
+                            В Лондоне собака по кличке Макс стала настоящим героем, когда
+                            заметила грабителя, пытающегося войти в дом её хозяев. К счастью,
+                            Макс оказался не только хорошим сторожем, но и настоящим
+                            защитником! После того как они устроили импровизированный
+                            “поединок” с грабителем, тот решил отступить. Похоже, Макс теперь
+                            будет получать бонусы в виде лакомств!
+                        </p>
+                    </article>
+
+                    <article class="news-item">
+                        <h3 class="news-item__title">
+                            В Индии мужчина посадил в саде целый лес и теперь помогает спасать
+                            планету
+                        </h3>
+                        <p class="news-item__date">24.06.2024 Воч Дима</p>
+                        <p class="news-item__text">
+                            Интересная новость пришла из Индии: мужчина по имени Дхармеш Сингх
+                            за последние 30 лет посадил более 3 миллионов деревьев! Его
+                            действия помогли восстановить экосистему в его родном районе, и
+                            теперь он считается неофициальным героем экологии. Все хотят
+                            научиться его подходу — как за 30 лет создать «свой» лес.
+                        </p>
+                    </article>
                 </div>
-                <div class="news-card">
-                    <h2 class="news-title">
-                        Собака спасла своего хозяина от ограбления, «выиграв» дуэль с
-                        грабителем
-                    </h2>
-                    <p class="news-meta">22.06.2024 Воч Дима</p>
-                    <p class="news-content">
-                        В Лондоне собака по кличке Макс стала настоящим героем, когда
-                        заметила грабителя, пытающегося войти в дом её хозяев. К счастью,
-                        Макс оказался не только хорошим сторожем, но и настоящим
-                        защитником! После того как они устроили импровизированный
-                        “поединок” с грабителем, тот решил отступить. Похоже, Макс теперь
-                        будет получать бонусы в виде лакомств!
-                    </p>
-                </div>
-                <div class="news-card">
-                    <h2 class="news-title">
-                        В Индии мужчина посадил в саде целый лес и теперь помогает спасать
-                        планету
-                    </h2>
-                    <p class="news-meta">24.06.2024 Воч Дима</p>
-                    <p class="news-content">
-                        Интересная новость пришла из Индии: мужчина по имени Дхармеш Сингх
-                        за последние 30 лет посадил более 3 миллионов деревьев! Его
-                        действия помогли восстановить экосистему в его родном районе, и
-                        теперь он считается неофициальным героем экологии. Все хотят
-                        научиться его подходу — как за 30 лет создать «свой» лес.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="footer">Футер</div>
+            </section>
+        </main>
+
+        <footer class="footer">
+            <p class="footer__text">&copy; 2025 Алёхин Алексей Витальевич, ЭФБО-07-24</p>
+        </footer>
     </div>
 </body>
 
