--- a/pages/news.html
+++ b/pages/news.html
@@ -41,50 +41,52 @@
                 <h2 class="news__title">Новости</h2>
 
                 <div class="news__list">
-
                     <article class="news-item">
                         <h3 class="news-item__title">
                             Кошка стала главой департамента в японском городе
                         </h3>
-                        <p class="news-item__date">20.06.2024 — Воч Дима</p>
+                        <p class="news-item__date">20.06.2024 Воч Дима</p>
                         <p class="news-item__text">
-                            В японском городке Тиба, в поисках оригинальности и способа привлечь
-                            внимание к местным вопросам, на пост главы департамента по связям с
-                            общественностью назначили… кошку по имени Момо! Она, конечно, не
-                            занимается административной работой, но её очаровательные фотографии
-                            и статус помогают повысить узнаваемость города и привлекать туристов.
-                            Мы все мечтаем о таком карьерном старте!
+                            В японском городке Тиба, в поисках оригинальности и способа
+                            привлечь внимание к местным вопросам, на пост главы департамента
+                            по связям с общественностью назначили… кошку по имени Момо! Она,
+                            конечно, не занимается административной работой, но её
+                            очаровательные фотографии и статус помогают повысить узнаваемость
+                            города и привлекать туристов. Мы все мечтаем о таком карьерном
+                            старте!
                         </p>
                     </article>
 
                     <article class="news-item">
                         <h3 class="news-item__title">
-                            Собака спасла своего хозяина от ограбления, «выиграв» дуэль с грабителем
+                            Собака спасла своего хозяина от ограбления, «выиграв» дуэль с
+                            грабителем
                         </h3>
-                        <p class="news-item__date">22.06.2024 — Воч Дима</p>
+                        <p class="news-item__date">22.06.2024 Воч Дима</p>
                         <p class="news-item__text">
-                            В Лондоне собака по кличке Макс стала настоящим героем, когда заметила
-                            грабителя, пытающегося войти в дом её хозяев. К счастью, Макс оказался
-                            не только хорошим сторожем, но и настоящим защитником! После того как
-                            они устроили импровизированный «поединок» с грабителем, тот решил
-                            отступить. Похоже, Макс теперь будет получать бонусы в виде лакомств!
+                            В Лондоне собака по кличке Макс стала настоящим героем, когда
+                            заметила грабителя, пытающегося войти в дом её хозяев. К счастью,
+                            Макс оказался не только хорошим сторожем, но и настоящим
+                            защитником! После того как они устроили импровизированный
+                            “поединок” с грабителем, тот решил отступить. Похоже, Макс теперь
+                            будет получать бонусы в виде лакомств!
                         </p>
                     </article>
 
                     <article class="news-item">
                         <h3 class="news-item__title">
-                            В Индии мужчина посадил в саде целый лес и теперь помогает спасать планету
+                            В Индии мужчина посадил в саде целый лес и теперь помогает спасать
+                            планету
                         </h3>
-                        <p class="news-item__date">24.06.2024 — Воч Дима</p>
+                        <p class="news-item__date">24.06.2024 Воч Дима</p>
                         <p class="news-item__text">
                             Интересная новость пришла из Индии: мужчина по имени Дхармеш Сингх
-                            за последние 30 лет посадил более 3 миллионов деревьев! Его действия
-                            помогли восстановить экосистему в его родном районе, и теперь он
-                            считается неофициальным героем экологии. Все хотят научиться его
-                            подходу — как за 30 лет создать «свой» лес.
+                            за последние 30 лет посадил более 3 миллионов деревьев! Его
+                            действия помогли восстановить экосистему в его родном районе, и
+                            теперь он считается неофициальным героем экологии. Все хотят
+                            научиться его подходу — как за 30 лет создать «свой» лес.
                         </p>
                     </article>
-
                 </div>
             </section>
         </main>
